--- a/app/globals.css
+++ b/app/globals.css
@@ -166,3 +166,12 @@
     overflow-x: hidden;
   }
 }
+
+.line {
+  width: 60px;
+  height: 3px;
+  background: #10b981;
+  border-radius: 10px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
